@@ -188,7 +188,9 @@ Chronological list of authors
   - Rishabh Shukla  
   - Manish Kumar
   - Aditi Tripathi
+  - Sukeerti T
   - Robot Jelly
+
 
 External code
 -------------
